# moke

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmake/: platform.cmake
cmake/platform/: cuda.cmake  hip.cmake
include/moke/: common.hpp  kernels.hpp  tensor.hpp
include/moke/common/: arithmetic.hpp  def.hpp  handle.hpp  memory.hpp  runtime.hpp
include/moke/tensor/: tensor.hpp  tensor_iterator.hpp  tensor_layout.hpp  tensor_view.hpp
moke/: CMakeLists.txt
moke/common/: CMakeLists.txt  handle.cu
moke/cuda/: CMakeLists.txt  memory.cu
moke/hip/: CMakeLists.txt  runtime.hip
moke/kernels/: CMakeLists.txt  vector_add.cu
moketest/: CMakeLists.txt
moketest/include/moketest/: common.hpp  comparator.hpp  executor.hpp
moketest/include/moketest/common/: time_unit.hpp
moketest/src/common/: CMakeLists.txt  comparator.cpp  profiler.cpp
moketest/src/cuda/: CMakeLists.txt
moketest/src/hip/: CMakeLists.txt
ops/cuda/: CMakeLists.txt  vector_add.cu
ops/hip/: CMakeLists.txt  vector_add.hip
src/: CMakeLists.txt
src/common/: CMakeLists.txt  memory.cpp  runtime.cpp
src/common/cuda/: CMakeLists.txt  runtime.cu
src/common/hip/: CMakeLists.txt
src/kernels/color_to_grayscale/: CMakeLists.txt  color_to_grayscale.hip
src/kernels/cuda/: vector_add.cu
src/kernels/hip/: vector_add.hip
src/kernels/vector_add/: CMakeLists.txt  vector_add_float4.cu  vector_add_generic.cu  vector_add_generic.hip
test/: CMakeLists.txt
test/include/moketest/: common.hpp  comparator.hpp  executor.hpp  generator.hpp  profiler.hpp  result.hpp
test/include/moketest/common/: print.hpp  typeof.hpp
test/moketest/: CMakeLists.txt  comparator.cpp  device_profiler.cu  host_profiler.cpp
test/moketest/common/: host_profiler.cpp
test/moketest/cuda/: CMakeLists.txt
test/moketest/hip/: CMakeLists.txt  device_profiler.hip
test/zoo/: CMakeLists.txt
test/zoo/vector_add/: CMakeLists.txt  main.cpp  vector_add.cpp  vector_add.hpp
zoo/: CMakeLists.txt  cuda.cmake  hip.cmake
zoo/vector_add/: vector_add.cpp  vector_add.hpp
