cmake_minimum_required(VERSION 3.21.0)
project(moke VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(DEFINED MOKE_PLATFORM)
    message("moke: enabled with platform ${MOKE_PLATFORM}")
    include(cmake/platform/${MOKE_PLATFORM}.cmake)
    add_subdirectory(moke)
    add_subdirectory(ops/${MOKE_PLATFORM})
else()
    message(FATAL_ERROR "moke: no platform specified.")
endif()

if (DEFINED MOKE_ENABLE_TEST)
    message("moketest and test zoo enabled")
    add_subdirectory(moketest)
    add_subdirectory(zoo)
endif()